# difyops

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: demo.sh
dify_admin/: __init__.py  audit.py  auth.py  cli.py  client.py  diff.py  doctor.py  env.py  env_diff.py  exceptions.py  explain.py  help.py  mcp_server.py  metadata.py  output.py  password.py  patch.py  resolve.py  snapshot.py  state.py  sync.py  templates.py
tests/: conftest.py  test_auth.py  test_cli_errors.py  test_cli_help.py  test_cli_metadata.py  test_cli_stdin.py  test_client.py  test_exceptions.py  test_help.py  test_metadata.py  test_output.py  test_patch.py  test_readonly.py  test_resolve.py  test_robustness_fixes.py  test_security_fixes.py
