[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dify-admin"
version = "0.1.0"
description = "DifyOps: AI-native ops layer for self-hosted Dify — CLI, MCP server, and Python library"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CaCC-Lab"}]
keywords = ["dify", "mcp", "llmops", "cli", "admin", "ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/CaCC-Lab/difyops"
Repository = "https://github.com/CaCC-Lab/difyops"
Issues = "https://github.com/CaCC-Lab/difyops/issues"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.0",
]
mcp = [
    "mcp>=1.0",
]
db = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
dify-admin = "dify_admin.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
